src/objects/Ticket_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please only choose MicroStrategy employees.</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@microstrategy.com</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Last_Date__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ticket Assignments</relationshipLabel>
        <relationshipName>Ticket_Assignments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Event_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Event Ticket</label>
        <referenceTo>Corporate_Event_Ticket__c</referenceTo>
        <relationshipLabel>Ticket Assignments</relationshipLabel>
        <relationshipName>Ticket_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_Tickets__c</fullName>
        <label># Cust Tickets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Enter Customer Names</description>
        <label>Customer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emp_Field__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Emp Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>TEXT(Attendee__r.Employee_Number_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Tickets__c</fullName>
        <label># Guest Tickets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EVP</fullName>
                </value>
                <value>
                    <fullName>BOD</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Emp_Field__c + Guest_Tickets__c + Cust_Tickets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ticket Assignment</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>